<resources>
    <string name="app_name">RecipesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_meal">Add Meal</string>
    <string name="test">Test</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="categories">Categories</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="over_popular_items">Over popular items</string>
    <string name="category_beef">Category : Beef</string>
    <string name="area_palestine">Area : Palestine</string>
    <string name="instructions">Instructions :</string>

    <string name="detail_meal_category">Category : %s</string>
    <string name="detail_meal_area">Area : %s</string>
    <string name="category_name">Category Name</string>
    <string name="deneme">deneme</string>


</resources>