<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activites.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/tvHome"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/home"
            android:textColor="@color/accent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="30sp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/search_item" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvWouldLikeToEat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/myfont"
        android:text="@string/what_would_you_like_to_eat"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/linearHeader"
        app:layout_constraintStart_toStartOf="@id/linearHeader" />

    <androidx.cardview.widget.CardView

        android:id="@+id/cardRandomMeal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWouldLikeToEat">

    <ImageView
        android:id="@+id/imgRandomMeal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent"
        android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvOverPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/myfont"
        android:text="@string/over_popular_items"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvWouldLikeToEat"
        app:layout_constraintTop_toBottomOf="@id/cardRandomMeal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMealsPopular"
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOverPopular" />

    <TextView
        android:id="@+id/tvCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/myfont"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/rvMealsPopular"
        app:layout_constraintTop_toBottomOf="@id/rvMealsPopular" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategories" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvViewCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

    </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>