<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:backgroundTint="@color/g_black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal Name">

            <ImageView
                android:id="@+id/imgMealDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddToFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favourite_item"
        android:backgroundTint="@color/accent"
        android:tint="@color/white"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/_10sdp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/linearLayoutMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <TextView
                    android:id="@+id/tvDetailCategories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category_beef"
                    android:textStyle="bold"
                    android:textColor="@color/g_black"
                    android:layout_weight="1"
                    app:drawableLeftCompat="@drawable/category_item"
                    app:drawableTint="@color/g_black" />

                <TextView
                    android:id="@+id/tvDetailArea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/area_palestine"
                    android:textStyle="bold"
                    android:textColor="@color/g_black"
                    android:layout_weight="1"
                    app:drawableLeftCompat="@drawable/location_item"
                    app:drawableTint="@color/g_black" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDetailInstructions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textStyle="bold"
                android:textColor="@color/g_black"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/myfont"
                app:drawableLeftCompat="@drawable/category_item"
                app:drawableTint="@color/g_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutMeal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                />

            <TextView
                android:id="@+id/tvStepsInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tvDetailInstructions"
                app:layout_constraintTop_toBottomOf="@id/tvDetailInstructions"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black" />
            
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imgYoutube"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom|center"
        android:src="@drawable/video_item"
        android:layout_marginBottom="@dimen/_10sdp" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBarMealActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>